# Shortcut

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: gen_ref.py
src/graiax/shortcut/: __init__.py  _typing_util.py  _util.py  formatter.py  interrupt.py  saya.py  text_parser.py
src/graiax/shortcut/commander/: __init__.py  _util.py
